--- a/portfolio.html
+++ b/portfolio.html
@@ -57,174 +57,156 @@
     <main class="container">
       <section class="section">
         <ul class="filter list">
-          <li class="filter-button-li">
+          <li class="filter-item">
             <button class="filter-button" type="button">Все</button>
           </li>
-          <li class="filter-button-li">
+          <li class="filter-item-li">
             <button class="filter-button" type="button">Веб-сайты</button>
           </li>
-          <li class="filter-button-li">
+          <li class="filter-item-li">
             <button class="filter-button" type="button">Приложения</button>
           </li>
-          <li class="filter-button-li">
+          <li class="filter-itemn-li">
             <button class="filter-button" type="button">Дизайн</button>
           </li>
-          <li class="filter-button-li">
+          <li class="filter-item-li">
             <button class="filter-button" type="button">Маркетинг</button>
           </li>
         </ul>
 
         <ul class="portfolio list">
           <li class="portfolio-item">
-            <article class="portfolio-card">
-              <div class="portfolio-thumb">
-                <a href="#"
-                  ><img
-                    src="images/project-1.jpg"
-                    width="370"
-                    alt="фото ноутбука с изображением сайта"
-                /></a>
-              </div>
-              <div class="portfolio-content">
-                <h2 class="portfolio-item-title">Технокряк</h2>
-                <p class="portfolio-item-text">Веб-сайт</p>
-              </div>
-            </article>
+            <div class="portfolio-thumb">
+              <a href="#"
+                ><img
+                  src="images/project-1.jpg"
+                  width="370"
+                  alt="фото ноутбука с изображением сайта"
+              /></a>
+            </div>
+            <div class="portfolio-content">
+              <h2 class="portfolio-item-title">Технокряк</h2>
+              <p class="portfolio-item-text">Веб-сайт</p>
+            </div>
           </li>
 
           <li class="portfolio-item">
-            <article class="portfolio-card">
-              <div class="portfolio-thumb">
-                <a href="#"
-                  ><img
-                    src="./images/project-2.jpg"
-                    width="370"
-                    alt="постер с баскетболистами"
-                /></a>
-              </div>
-              <div class="portfolio-content">
-                <h2 class="portfolio-item-title">
-                  Постер New Orlean vs Golden Star
-                </h2>
-                <p class="portfolio-item-text">Дизайн</p>
-              </div>
-            </article>
+            <div class="portfolio-thumb">
+              <a href="#"
+                ><img
+                  src="./images/project-2.jpg"
+                  width="370"
+                  alt="постер с баскетболистами"
+              /></a>
+            </div>
+            <div class="portfolio-content">
+              <h2 class="portfolio-item-title">
+                Постер New Orlean vs Golden Star
+              </h2>
+              <p class="portfolio-item-text">Дизайн</p>
+            </div>
           </li>
 
           <li class="portfolio-item">
-            <article class="portfolio-card">
-              <div class="portfolio-thumb">
-                <a href="#"
-                  ><img
-                    src="./images/project-3.jpg"
-                    width="370"
-                    alt="логотип ресторана "
-                /></a>
-              </div>
-              <div class="portfolio-content">
-                <h2 class="portfolio-item-title">Ресторан Seafood</h2>
-                <p class="portfolio-item-text">Приложение</p>
-              </div>
-            </article>
+            <div class="portfolio-thumb">
+              <a href="#"
+                ><img
+                  src="./images/project-3.jpg"
+                  width="370"
+                  alt="логотип ресторана "
+              /></a>
+            </div>
+            <div class="portfolio-content">
+              <h2 class="portfolio-item-title">Ресторан Seafood</h2>
+              <p class="portfolio-item-text">Приложение</p>
+            </div>
           </li>
 
           <li class="portfolio-item">
-            <article class="portfolio-card">
-              <div class="portfolio-thumb">
-                <a href="#"
-                  ><img
-                    src="./images/project-4.jpg"
-                    width="370"
-                    alt="фото наушников "
-                /></a>
-              </div>
-              <div class="portfolio-content">
-                <h2 class="portfolio-item-title">Проект Prime</h2>
-                <p class="portfolio-item-text">Маркетинг</p>
-              </div>
-            </article>
+            <div class="portfolio-thumb">
+              <a href="#"
+                ><img
+                  src="./images/project-4.jpg"
+                  width="370"
+                  alt="фото наушников "
+              /></a>
+            </div>
+            <div class="portfolio-content">
+              <h2 class="portfolio-item-title">Проект Prime</h2>
+              <p class="portfolio-item-text">Маркетинг</p>
+            </div>
           </li>
 
           <li class="portfolio-item">
-            <article class="portfolio-card">
-              <div class="portfolio-thumb">
-                <a href="#"
-                  ><img src="./images/project-5.jpg" width="370" alt="коробки "
-                /></a>
-              </div>
-              <div class="portfolio-content">
-                <h2 class="portfolio-item-title">Проект Boxes</h2>
-                <p class="portfolio-item-text">Приложение</p>
-              </div>
-            </article>
+            <div class="portfolio-thumb">
+              <a href="#"
+                ><img src="./images/project-5.jpg" width="370" alt="коробки "
+              /></a>
+            </div>
+            <div class="portfolio-content">
+              <h2 class="portfolio-item-title">Проект Boxes</h2>
+              <p class="portfolio-item-text">Приложение</p>
+            </div>
           </li>
 
           <li class="portfolio-item">
-            <article class="portfolio-card">
-              <div class="portfolio-thumb">
-                <a href="#"
-                  ><img
-                    src="./images/project-6.jpg"
-                    width="370"
-                    alt="фото экрана компьютера "
-                /></a>
-              </div>
-              <div class="portfolio-content">
-                <h2 class="portfolio-item-title">Inspiration has no Borders</h2>
-                <p class="portfolio-item-text">Веб-сайт</p>
-              </div>
-            </article>
+            <div class="portfolio-thumb">
+              <a href="#"
+                ><img
+                  src="./images/project-6.jpg"
+                  width="370"
+                  alt="фото экрана компьютера "
+              /></a>
+            </div>
+            <div class="portfolio-content">
+              <h2 class="portfolio-item-title">Inspiration has no Borders</h2>
+              <p class="portfolio-item-text">Веб-сайт</p>
+            </div>
           </li>
 
           <li class="portfolio-item">
-            <article class="portfolio-card">
-              <div class="portfolio-thumb">
-                <a href="#"
-                  ><img
-                    src="./images/project-7.jpg"
-                    width="370"
-                    alt="открытый журнал "
-                /></a>
-              </div>
-              <div class="portfolio-content">
-                <h2 class="portfolio-item-title">Издание Limited Edition</h2>
-                <p class="portfolio-item-text">Дизайн</p>
-              </div>
-            </article>
+            <div class="portfolio-thumb">
+              <a href="#"
+                ><img
+                  src="./images/project-7.jpg"
+                  width="370"
+                  alt="открытый журнал "
+              /></a>
+            </div>
+            <div class="portfolio-content">
+              <h2 class="portfolio-item-title">Издание Limited Edition</h2>
+              <p class="portfolio-item-text">Дизайн</p>
+            </div>
           </li>
 
           <li class="portfolio-item">
-            <article class="portfolio-card">
-              <div class="portfolio-thumb">
-                <a href="#"
-                  ><img
-                    src="./images/project-8.jpg"
-                    width="370"
-                    alt="фото бирки с логотипом "
-                /></a>
-              </div>
-              <div class="portfolio-content">
-                <h2 class="portfolio-item-title">Проект LAB</h2>
-                <p class="portfolio-item-text">Маркетинг</p>
-              </div>
-            </article>
+            <div class="portfolio-thumb">
+              <a href="#"
+                ><img
+                  src="./images/project-8.jpg"
+                  width="370"
+                  alt="фото бирки с логотипом "
+              /></a>
+            </div>
+            <div class="portfolio-content">
+              <h2 class="portfolio-item-title">Проект LAB</h2>
+              <p class="portfolio-item-text">Маркетинг</p>
+            </div>
           </li>
 
           <li class="portfolio-item">
-            <article class="portfolio-card">
-              <div class="portfolio-thumb">
-                <a href="#"
-                  ><img
-                    src="./images/project-9.jpg"
-                    width="370"
-                    alt="работа на ноутбуке "
-                /></a>
-              </div>
-              <div class="portfolio-content">
-                <h2 class="portfolio-item-title">Growing Business</h2>
-                <p class="portfolio-item-text">Приложение</p>
-              </div>
-            </article>
+            <div class="portfolio-thumb">
+              <a href="#"
+                ><img
+                  src="./images/project-9.jpg"
+                  width="370"
+                  alt="работа на ноутбуке "
+              /></a>
+            </div>
+            <div class="portfolio-content">
+              <h2 class="portfolio-item-title">Growing Business</h2>
+              <p class="portfolio-item-text">Приложение</p>
+            </div>
           </li>
         </ul>
       </section>
