--- a/portfolio.html
+++ b/portfolio.html
@@ -28,25 +28,25 @@
 
         <nav>
           <ul class="nav-list">
-            <li class="nav-list-li">
+            <li class="nav-list-item">
               <a href="./index.html" class="nav-link">Студия</a>
             </li>
-            <li class="nav-list-li">
+            <li class="nav-list-item">
               <a href="./portfolio.html" class="nav-link current">Портфолио</a>
             </li>
-            <li class="nav-list-li">
+            <li class="nav-list-item">
               <a href="#" class="nav-link">Контакты</a>
             </li>
           </ul>
         </nav>
 
         <ul class="info-list">
-          <li class="info-list-li">
+          <li class="info-list-item">
             <a href="mailto:info@example.com" class="info-link"
               >info@devstudio.com</a
             >
           </li>
-          <li class="info-list-li">
+          <li class="info-list-item">
             <a href="tel:+380991111111" class="info-link">+38 096 111 11 11</a>
           </li>
         </ul>
@@ -76,137 +76,136 @@
 
         <ul class="portfolio list">
           <li class="portfolio-item">
-            <div class="portfolio-thumb">
-              <a href="#"
-                ><img
-                  src="images/project-1.jpg"
-                  width="370"
-                  alt="фото ноутбука с изображением сайта"
-              /></a>
-            </div>
-            <div class="portfolio-content">
-              <h2 class="portfolio-item-title">Технокряк</h2>
-              <p class="portfolio-item-text">Веб-сайт</p>
-            </div>
+            <a href="#"
+              ><img
+                src="images/project-1.jpg"
+                width="370"
+                alt="фото ноутбука с изображением сайта"
+              />
+
+              <div class="portfolio-content">
+                <h2 class="portfolio-item-title">Технокряк</h2>
+                <p class="portfolio-item-text">Веб-сайт</p>
+              </div>
+            </a>
           </li>
 
           <li class="portfolio-item">
-            <div class="portfolio-thumb">
-              <a href="#"
-                ><img
-                  src="./images/project-2.jpg"
-                  width="370"
-                  alt="постер с баскетболистами"
-              /></a>
-            </div>
-            <div class="portfolio-content">
-              <h2 class="portfolio-item-title">
-                Постер New Orlean vs Golden Star
-              </h2>
-              <p class="portfolio-item-text">Дизайн</p>
-            </div>
+            <a href="#"
+              ><img
+                src="./images/project-2.jpg"
+                width="370"
+                alt="постер с баскетболистами"
+              />
+
+              <div class="portfolio-content">
+                <h2 class="portfolio-item-title">
+                  Постер New Orlean vs Golden Star
+                </h2>
+                <p class="portfolio-item-text">Дизайн</p>
+              </div>
+            </a>
           </li>
 
           <li class="portfolio-item">
-            <div class="portfolio-thumb">
-              <a href="#"
-                ><img
-                  src="./images/project-3.jpg"
-                  width="370"
-                  alt="логотип ресторана "
-              /></a>
-            </div>
-            <div class="portfolio-content">
-              <h2 class="portfolio-item-title">Ресторан Seafood</h2>
-              <p class="portfolio-item-text">Приложение</p>
-            </div>
+            <a href="#"
+              ><img
+                src="./images/project-3.jpg"
+                width="370"
+                alt="логотип ресторана "
+              />
+
+              <div class="portfolio-content">
+                <h2 class="portfolio-item-title">Ресторан Seafood</h2>
+                <p class="portfolio-item-text">Приложение</p>
+              </div>
+            </a>
           </li>
 
           <li class="portfolio-item">
-            <div class="portfolio-thumb">
-              <a href="#"
-                ><img
-                  src="./images/project-4.jpg"
-                  width="370"
-                  alt="фото наушников "
-              /></a>
-            </div>
-            <div class="portfolio-content">
-              <h2 class="portfolio-item-title">Проект Prime</h2>
-              <p class="portfolio-item-text">Маркетинг</p>
-            </div>
+            <a href="#"
+              ><img
+                src="./images/project-4.jpg"
+                width="370"
+                alt="фото наушников "
+              />
+
+              <div class="portfolio-content">
+                <h2 class="portfolio-item-title">Проект Prime</h2>
+                <p class="portfolio-item-text">Маркетинг</p>
+              </div>
+            </a>
           </li>
 
           <li class="portfolio-item">
-            <div class="portfolio-thumb">
-              <a href="#"
-                ><img src="./images/project-5.jpg" width="370" alt="коробки "
-              /></a>
-            </div>
-            <div class="portfolio-content">
-              <h2 class="portfolio-item-title">Проект Boxes</h2>
-              <p class="portfolio-item-text">Приложение</p>
-            </div>
+            <a href="#"
+              ><img src="./images/project-5.jpg" width="370" alt="коробки " />
+
+              <div class="portfolio-content">
+                <h2 class="portfolio-item-title">Проект Boxes</h2>
+                <p class="portfolio-item-text">Приложение</p>
+              </div>
+            </a>
           </li>
 
           <li class="portfolio-item">
-            <div class="portfolio-thumb">
-              <a href="#"
-                ><img
-                  src="./images/project-6.jpg"
-                  width="370"
-                  alt="фото экрана компьютера "
-              /></a>
-            </div>
-            <div class="portfolio-content">
-              <h2 class="portfolio-item-title">Inspiration has no Borders</h2>
-              <p class="portfolio-item-text">Веб-сайт</p>
-            </div>
+            <a href="#"
+              ><img
+                src="./images/project-6.jpg"
+                width="370"
+                alt="фото экрана компьютера "
+              />
+
+              <div class="portfolio-content">
+                <h2 class="portfolio-item-title">Inspiration has no Borders</h2>
+                <p class="portfolio-item-text">Веб-сайт</p>
+              </div>
+            </a>
           </li>
 
           <li class="portfolio-item">
-            <div class="portfolio-thumb">
-              <a href="#"
-                ><img
-                  src="./images/project-7.jpg"
-                  width="370"
-                  alt="открытый журнал "
-              /></a>
-            </div>
-            <div class="portfolio-content">
-              <h2 class="portfolio-item-title">Издание Limited Edition</h2>
-              <p class="portfolio-item-text">Дизайн</p>
-            </div>
+            <a href="#"
+              ><img
+                src="./images/project-7.jpg"
+                width="370"
+                alt="открытый журнал "
+              />
+
+              <div class="portfolio-content">
+                <h2 class="portfolio-item-title">Издание Limited Edition</h2>
+                <p class="portfolio-item-text">Дизайн</p>
+              </div>
+            </a>
           </li>
 
           <li class="portfolio-item">
-            <div class="portfolio-thumb">
-              <a href="#"
-                ><img
-                  src="./images/project-8.jpg"
-                  width="370"
-                  alt="фото бирки с логотипом "
-              /></a>
-            </div>
-            <div class="portfolio-content">
-              <h2 class="portfolio-item-title">Проект LAB</h2>
-              <p class="portfolio-item-text">Маркетинг</p>
-            </div>
+            <a href="#"
+              ><img
+                src="./images/project-8.jpg"
+                width="370"
+                alt="фото бирки с логотипом "
+              />
+
+              <div class="portfolio-content">
+                <h2 class="portfolio-item-title">Проект LAB</h2>
+                <p class="portfolio-item-text">Маркетинг</p>
+              </div>
+            </a>
           </li>
 
           <li class="portfolio-item">
-            <div class="portfolio-thumb">
-              <a href="#"
-                ><img
-                  src="./images/project-9.jpg"
-                  width="370"
-                  alt="работа на ноутбуке "
-              /></a>
-            </div>
-            <div class="portfolio-content">
-              <h2 class="portfolio-item-title">Growing Business</h2>
-              <p class="portfolio-item-text">Приложение</p>
-            </div>
+            <a href="#"
+              ><img
+                src="./images/project-9.jpg"
+                width="370"
+                alt="работа на ноутбуке "
+              />
+
+              <div class="portfolio-content">
+                <h2 class="portfolio-item-title">Growing Business</h2>
+                <p class="portfolio-item-text">Приложение</p>
+              </div>
+            </a>
           </li>
         </ul>
       </section>
