--- a/index.html
+++ b/index.html
@@ -28,25 +28,25 @@
 
         <nav>
           <ul class="nav-list">
-            <li class="nav-list-li">
+            <li class="nav-list-item">
               <a href="./index.html" class="nav-link current">Студия</a>
             </li>
-            <li class="nav-list-li">
+            <li class="nav-list-item">
               <a href="./portfolio.html" class="nav-link">Портфолио</a>
             </li>
-            <li class="nav-list-li">
+            <li class="nav-list-item">
               <a href="#" class="nav-link">Контакты</a>
             </li>
           </ul>
         </nav>
 
         <ul class="info-list">
-          <li class="info-list-li">
+          <li class="info-list-item">
             <a href="mailto:info@example.com" class="info-link"
               >info@devstudio.com</a
             >
           </li>
-          <li class="info-list-li">
+          <li class="info-list-item">
             <a href="tel:+380991111111" class="info-link">+38 096 111 11 11</a>
           </li>
         </ul>
@@ -67,31 +67,34 @@
       <!-- Особенности-->
       <section class="section">
         <div class="container">
-          <ul class="feature-section">
-            <li class="item">
-              <h2 class="feature">Внимание к деталям</h2>
-              <p class="feature-text">
+          <ul class="feature-list">
+            <li class="feature-list-item">
+              <h2 class="feature-item-title">Внимание к деталям</h2>
+              <p class="feature-item-text">
                 Идейные соображения, а также начало повседневной работы по
                 формированию позиции.
               </p>
             </li>
-            <li class="item">
-              <h2 class="feature">Пунктуальность</h2>
-              <p class="feature-text">
+
+            <li class="feature-list-item">
+              <h2 class="feature-item-title">Пунктуальность</h2>
+              <p class="feature-item-text">
                 Задача организации, в особенности же рамки и место обучения
                 кадров влечет за собой.
               </p>
             </li>
-            <li class="item">
-              <h2 class="feature">Планирование</h2>
-              <p class="feature-text">
+
+            <li class="feature-list-item">
+              <h2 class="feature-item-title">Планирование</h2>
+              <p class="feature-item-text">
                 Равным образом консультация с широким активом в значительной
                 степени обуславливает.
               </p>
             </li>
-            <li class="item">
-              <h2 class="feature">Современные технологии</h2>
-              <p class="feature-text">
+
+            <li class="feature-list-item">
+              <h2 class="feature-item-title">Современные технологии</h2>
+              <p class="feature-item-text">
                 Значимость этих проблем настолько очевидна, что реализация
                 плановых заданий.
               </p>
@@ -103,7 +106,7 @@
       <section class="container">
         <h2 class="title">Чем мы занимаемся</h2>
         <ul class="img">
-          <li class="img-t">
+          <li>
             <a href=""
               ><img
                 src="./images/img-01.jpg"
@@ -112,7 +115,7 @@
             /></a>
           </li>
 
-          <li class="img-t">
+          <li>
             <a href=""
               ><img
                 src="./images/img-02.jpg"
@@ -121,7 +124,7 @@
             /></a>
           </li>
 
-          <li class="img-t">
+          <li>
             <a href=""
               ><img src="./images/img-03.jpg" width="370" alt="выбор цвета"
             /></a>
@@ -137,61 +140,60 @@
 
           <ul class="team-work">
             <li class="team-card">
-              <article class="team">
-                <div class="team-thumb">
-                  <img
-                    src="./images/img-1.jpg"
-                    width="270"
-                    alt="фото Игорь Демьяненко "
-                  />
-                </div>
+              <div class="team">
+                <img
+                  src="./images/img-1.jpg"
+                  width="270"
+                  alt="фото Игорь Демьяненко "
+                />
+
                 <div class="team-content">
-                  <h3 class="team-list">Игорь Демьяненко</h3>
+                  <h3 class="team-name">Игорь Демьяненко</h3>
                   <p class="team-text">Product Designer</p>
                 </div>
-              </article>
+              </div>
             </li>
 
             <li class="team-card">
-              <article class="team">
+              <div class="team">
                 <img
                   src="./images/img-2.jpg"
                   width="270"
                   alt="фото Ольга Репина"
                 />
                 <div class="team-content">
-                  <h3 class="team-list">Ольга Репина</h3>
+                  <h3 class="team-name">Ольга Репина</h3>
                   <p class="team-text">Frontend Developer</p>
                 </div>
-              </article>
+              </div>
             </li>
 
             <li class="team-card">
-              <article class="team">
+              <div class="team">
                 <img
                   src="./images/img-3.jpg"
                   width="270"
                   alt="фото Николай Тарасов "
                 />
                 <div class="team-content">
-                  <h3 class="team-list">Николай Тарасов</h3>
+                  <h3 class="team-name">Николай Тарасов</h3>
                   <p class="team-text">Marketing</p>
                 </div>
-              </article>
+              </div>
             </li>
 
             <li class="team-card">
-              <article class="team">
+              <div class="team">
                 <img
                   src="./images/img-4.jpg"
                   width="270"
                   alt="фото Михаил Ермаков "
                 />
                 <div class="team-content">
-                  <h3 class="team-list">Михаил Ермаков</h3>
+                  <h3 class="team-name">Михаил Ермаков</h3>
                   <p class="team-text">UI Designer</p>
                 </div>
-              </article>
+              </div>
             </li>
           </ul>
         </div>
@@ -200,7 +202,7 @@
 
     <footer class="footer">
       <div class="container">
-        <a href="#" class="logo log" lang="en"
+        <a href="#" class="logo" lang="en"
           ><span class="logo-web">Web</span
           ><span class="logo-footer">Studio</span></a
         >
