--- a/portfolio.html
+++ b/portfolio.html
@@ -77,7 +77,7 @@
 
         <ul class="portfolio list">
           <li class="portfolio-item">
-            <a href="#"
+            <a class="portfolio-item" href="#"
               ><img
                 src="images/project-1.jpg"
                 width="370"
